refactor: RoomRedisRepository 리팩토링